--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@ckeditor/ckeditor5-dev-utils": "^13.0.0",
     "@ckeditor/ckeditor5-dev-webpack-plugin": "^9.0.0",
     "@ckeditor/ckeditor5-easy-image": "^19.0.0",
+    "@ckeditor/ckeditor5-editor-balloon": "^19.0.1",
     "@ckeditor/ckeditor5-editor-classic": "^19.0.0",
     "@ckeditor/ckeditor5-editor-inline": "^19.0.0",
     "@ckeditor/ckeditor5-essentials": "^19.0.0",
